# pivot

./: index.json  info.json  regressions.xml
graphs/arch-arm64/branch-main/cpu-Apple M1 Pro/flit/machine-carls-mbp-2.lan/num_cpu-10/os-Darwin 21.6.0/python-3.9/ram-34359738368/: pivot_benchmarks.time_import_pivot_cli.json  pivot_benchmarks.time_short_sleep.json  summary.json
graphs/summary/: pivot_benchmarks.time_sleep.json
src/: .gitignore  LICENSE  Makefile  README.md  asv.conf.json  cli.py  pivot.py  pypivot.py  pyproject.toml
src/asv/: .gitignore  pivot_benchmarks.py
src/asv/html/: index.json  info.json  regressions.xml
src/asv/html/graphs/arch-arm64/branch-main/cpu-Apple M1 Pro/flit/machine-carls-mbp-2.lan/num_cpu-10/os-Darwin 21.6.0/python-3.9/ram-34359738368/: pivot_benchmarks.time_import_pivot_cli.json  summary.json
src/asv/html/graphs/summary/: pivot_benchmarks.time_short_sleep.json  pivot_benchmarks.time_sleep.json
src/asv/results/: benchmarks.json
src/asv/results/carls-mbp-2.lan/: d4534edf-virtualenv-py3.9-flit.json  machine.json
src/data/share/man/man1/: pivot.1
src/pivot/: __init__.py  cli.py  pivot.py
src/tests/: pivot_test.py  pypivot_test.py
