[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pypivot"
authors = [{name = "Carl Anderson", email = "carl@dumpsterfire.dev"}]
dynamic = ["version", "description"]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "click",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-cov",
    "tox",
]
doc = [
    "click-man",
]

[project.urls]
repository = "https://github.com/barabo/pivot"

[project.scripts]
pivot = "pivot:cli.main"

[tool.black]
line-length = 79

[tool.flit.external-data]
directory = "data"

[tool.flit.module]
name = "pivot"

[tool.flit.sdist]
include = [
    "LICENSE",
    "README.md",
]
